kube/apps/glances/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glances
spec:
  selector:
    app.kubernetes.io/name: glances
  ports:
    - name: http
      port: 61208
